[package]
name = "back-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7"
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls"] }
uuid = { version = "1", features = ["serde", "v4"] }
shuttle-shared-db = { version = "0.55.0", features = ["postgres"] }